[gd_scene load_steps=7 format=2]

[ext_resource path="res://Elements/Weather/Rain/Rain.gd" type="Script" id=1]
[ext_resource path="res://Art/Weather/Rain.png" type="Texture" id=2]
[ext_resource path="res://Art/temp/Area.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 34, 34 )

[sub_resource type="CircleShape2D" id=3]
radius = 250.0

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "1",
"speed": 5.0
} ]

[node name="Rain" type="Node2D"]
script = ExtResource( 1 )

[node name="ClickArea" type="Area2D" parent="."]
collision_layer = 524288
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="ClickArea"]
shape = SubResource( 2 )

[node name="EffectArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="EffectArea"]
modulate = Color( 0.168627, 0.882353, 0.94902, 0.392157 )
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="EffectArea"]
shape = SubResource( 3 )

[node name="ColdTimer" type="Timer" parent="."]
one_shot = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.9, 0.9 )
frames = SubResource( 1 )
animation = "1"

[connection signal="mouse_entered" from="ClickArea" to="." method="_on_ClickArea_mouse_entered"]
[connection signal="mouse_exited" from="ClickArea" to="." method="_on_ClickArea_mouse_exited"]
[connection signal="body_entered" from="EffectArea" to="." method="_on_EffectArea_body_entered"]
[connection signal="body_exited" from="EffectArea" to="." method="_on_EffectArea_body_exited"]
